# paramore

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  combine_gammagamma.py  combine_gammagamma_toys.py  datacard_api.py  hgg_htt_discovery.py  hgg_htt_discovery_ew.py  plotting_helpers.py
examples/samples/hgg_htt_discovery/: cat0_7TeV.parquet  htt_data_obs.parquet  htt_templates.parquet
src/paramore/: __init__.py  distributions.py
tests/: test_public_api.py
