[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paramore"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evermore >= 0.4.1",
    "numpy",
    "pandas",
    "matplotlib",
    "mplhep",
    "pyarrow",
    "iminuit",
    "ipython",
    "jax",
    "jaxlib",
    "tqdm",
    "optax",
    "optimistix",
    "dask",
    "distributed",
    "quadax",
    "joblib>=1.5.2",
    "everwillow>=0.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/paramore"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=paramore {args:tests}"

[tool.hatch.envs.lint]
detached = true
dependencies = ["pre-commit"]

[tool.hatch.envs.lint.scripts]
all = "pre-commit run --all-files"

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.hatch.envs.docs.scripts]
serve = "mkdocs serve"
build = "mkdocs build"

[tool.ruff.lint]
ignore = [
    "F722",  # jaxtyping annotation strings (e.g. "nbins") are not valid Python expressions
    "F821",  # jaxtyping annotation strings reference names unknown to ruff
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
